fixed photos and and photo titles, changed code so that font size and spacing were adjusted and fully resizeable

--- a/styles.css
+++ b/styles.css
@@ -39,18 +39,14 @@ nav{
   
 }
 
-.project{
-  width:100px;
-  height:100px;
-  color:gray;
-}
+
 img.pic{
   width:100px;
   height:100px;
 }
 
 h1{
-  margin-top:8vw;
+  margin-top:5vw;
   font-size:4vw;
   text-align:center;
 }
@@ -69,7 +65,7 @@ h3{
   padding-top:0;
   border-radius:50%;
   z-index:10;
-  border:2px solid rgba(0,0,0,.5);
+  border:3px solid rgba(0,0,0,.6);
 }
 
 p{
@@ -77,6 +73,7 @@ p{
   padding-left:8vw;
   padding-right:8vw;
   text-align:center;
+  margin-bottom: 3.9vw;
 }
 
 #myprojects{
@@ -84,10 +81,7 @@ p{
   text-align:center;
 }
 
-#projects{
-  display:flex;
-  justify-content:space-evenly;
-}
+
 
 #socials{
   display:flex;
@@ -98,6 +92,7 @@ p{
   width:23vw;
   height:26vw;
   margin:auto;
+  border-radius: 3%;
 }
 
 .social{
@@ -111,7 +106,29 @@ p{
 
 
 
-.project{
-  position:absolute;
+
+
+#projects{
+  display:flex;
+  justify-content:space-evenly;
+  margin-bottom: 7vw;;
 }
 
+.project{
+  position:relative;
+}
+
+
+
+.project-title{
+  position:absolute;
+  top:0vw;
+  left: 10vw;
+  color:#dadafa;
+  transform: translate(-50%, -50%);
+}
+
+h2{
+  margin-top: 2.5vw;
+  margin-bottom: .9vw;
+}
